Add a workaround for unbalanced key events on macOS

We have a proper fix for Linux and Windows in a form of a patch
for Qt, but we still need a workaround for macOS.

Qt bug: https://bugreports.qt.io/browse/QTBUG-103868

BUG:454256