libs/ui/input/kis_input_manager_p.h
@@ -74,6 +74,9 @@ public:
     QScopedPointer<QEvent> originatingTouchBeginEvent;
     bool buttonPressed = false;
 
+    bool useUnbalancedKeyPressEventWorkaround = false;
+    bool shouldSynchronizeOnNextKeyPress = false;
+
     KisPopupWidgetInterface* popupWidget;
 
     void blockMouseEvents();
